# python-http-client-demo

./: .bandit.yaml  .gitignore  .isort.cfg  .pre-commit-config.yaml  COMMITS.md  COMMITS.md:Zone.Identifier  README.md  README_demo_client.md:Zone.Identifier  demo.py  demo.py.save  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
src/demo_client/: __init__.py  __main__.py
tests/: test_cli.py  test_client.py  test_demo.py  test_errors.py  test_math.py
