[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-http-client-demo"
version = "1.0.1"
description = "Tiny Python HTTP client demo (CLI)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Roman Lütkenhaus" }]
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.0",
  "black>=24.0",
  "isort>=5.12",
  "flake8>=6.1",
  "bandit>=1.7",
  "safety>=3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["demo_client*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
