[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-http-client-demo"
version = "1.0.2"
description = "Small demo HTTP client (httpx) with tests"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "rluetken-dev" }]

# Runtime deps
dependencies = [
  "httpx>=0.27.0",
  "colorama>=0.4",
]

# Extras für CI/Dev
[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "respx>=0.22",
  "black>=24.4",
  "isort>=5.13",
  "flake8>=7.1",
  "pre-commit>=3.7",
  "safety>=3.1",
  "bandit>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["demo_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source_pkgs = ["demo_client"]
branch = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]  # kompatibel zu Black

[tool.coverage.report]
omit = ["src/demo_client/__main__.py"]
